--- a/Sunum/comp/deneme.ipynb
+++ b/Sunum/comp/deneme.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,95 @@
       "Redistribute latency...\n",
       "Pipeline is PREROLLED ...\n",
       "Setting pipeline to PLAYING ...\n",
-      "New clock: GstSystemClock\n"
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:10.246478057\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:09.501958921\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:10.126304276\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:09.512153599\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:11.485393033\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:13.308221144\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:09.607723144\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:13.214994387\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n"
      ]
     }
    ],
@@ -52,24 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'original': '23.332 MegaBytes',\n",
-       " 'cabac_true': '13.856 MegaBytes',\n",
-       " 'cabac_false': '13.748 MegaBytes',\n",
-       " 'dct8x8_true': '13.864 MegaBytes',\n",
-       " 'dct8x8_false': '13.835 MegaBytes',\n",
-       " 'interlaced_true': '13.872 MegaBytes',\n",
-       " 'interlaced_false': '13.865 MegaBytes',\n",
-       " 'intra-refresh_true': '13.732 MegaBytes',\n",
-       " 'intra-refresh_false': '13.852 MegaBytes'}"
+       " 'cabac_true': '13.857 MegaBytes',\n",
+       " 'cabac_false': '13.756 MegaBytes',\n",
+       " 'dct8x8_true': '13.873 MegaBytes',\n",
+       " 'dct8x8_false': '13.847 MegaBytes',\n",
+       " 'interlaced_true': '13.848 MegaBytes',\n",
+       " 'interlaced_false': '13.847 MegaBytes',\n",
+       " 'intra-refresh_true': '13.753 MegaBytes',\n",
+       " 'intra-refresh_false': '13.870 MegaBytes'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,35 +202,35 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cabac_true</th>\n",
-       "      <td>13.856 MegaBytes</td>\n",
+       "      <td>13.857 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cabac_false</th>\n",
-       "      <td>13.748 MegaBytes</td>\n",
+       "      <td>13.756 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dct8x8_true</th>\n",
-       "      <td>13.864 MegaBytes</td>\n",
+       "      <td>13.873 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dct8x8_false</th>\n",
-       "      <td>13.835 MegaBytes</td>\n",
+       "      <td>13.847 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>interlaced_true</th>\n",
-       "      <td>13.872 MegaBytes</td>\n",
+       "      <td>13.848 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>interlaced_false</th>\n",
-       "      <td>13.865 MegaBytes</td>\n",
+       "      <td>13.847 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>intra-refresh_true</th>\n",
-       "      <td>13.732 MegaBytes</td>\n",
+       "      <td>13.753 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>intra-refresh_false</th>\n",
-       "      <td>13.852 MegaBytes</td>\n",
+       "      <td>13.870 MegaBytes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,17 +239,17 @@
       "text/plain": [
        "                        Ortalama 12sn\n",
        "original             23.332 MegaBytes\n",
-       "cabac_true           13.856 MegaBytes\n",
-       "cabac_false          13.748 MegaBytes\n",
-       "dct8x8_true          13.864 MegaBytes\n",
-       "dct8x8_false         13.835 MegaBytes\n",
-       "interlaced_true      13.872 MegaBytes\n",
-       "interlaced_false     13.865 MegaBytes\n",
-       "intra-refresh_true   13.732 MegaBytes\n",
-       "intra-refresh_false  13.852 MegaBytes"
+       "cabac_true           13.857 MegaBytes\n",
+       "cabac_false          13.756 MegaBytes\n",
+       "dct8x8_true          13.873 MegaBytes\n",
+       "dct8x8_false         13.847 MegaBytes\n",
+       "interlaced_true      13.848 MegaBytes\n",
+       "interlaced_false     13.847 MegaBytes\n",
+       "intra-refresh_true   13.753 MegaBytes\n",
+       "intra-refresh_false  13.870 MegaBytes"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,11 +263,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('sıkıştırma_verileri_tekli.csv',index=False)"
+    "df.to_csv('sıkıştırma_verileri_tekli.csv',index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:07.535515154\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'13.558 MegaBytes'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(f'gst-launch-1.0 filesrc location={video_name} ! qtdemux ! avdec_h264 ! x264enc cabac=false dct8x8=false interlaced=false intra-refresh=true ! mp4mux ! filesink location=video.mp4')\n",
+    "'{0:.3f} MegaBytes'.format(os.stat(\"video.mp4\").st_size/(1024*1024))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Ortalama 12sn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>original</td>\n",
+       "      <td>23.332 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cabac_true</td>\n",
+       "      <td>13.857 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cabac_false</td>\n",
+       "      <td>13.756 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dct8x8_true</td>\n",
+       "      <td>13.873 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dct8x8_false</td>\n",
+       "      <td>13.847 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>interlaced_true</td>\n",
+       "      <td>13.848 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>interlaced_false</td>\n",
+       "      <td>13.847 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>intra-refresh_true</td>\n",
+       "      <td>13.753 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>intra-refresh_false</td>\n",
+       "      <td>13.870 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>en_iyi</td>\n",
+       "      <td>13.558</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Unnamed: 0     Ortalama 12sn\n",
+       "0             original  23.332 MegaBytes\n",
+       "1           cabac_true  13.857 MegaBytes\n",
+       "2          cabac_false  13.756 MegaBytes\n",
+       "3          dct8x8_true  13.873 MegaBytes\n",
+       "4         dct8x8_false  13.847 MegaBytes\n",
+       "5      interlaced_true  13.848 MegaBytes\n",
+       "6     interlaced_false  13.847 MegaBytes\n",
+       "7   intra-refresh_true  13.753 MegaBytes\n",
+       "8  intra-refresh_false  13.870 MegaBytes\n",
+       "9               en_iyi            13.558"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('sıkıştırma_verileri_tekli.csv')"
    ]
   },
   {
@@ -240,6 +475,13 @@
     "        size='{0:.3f} MegaBytes'.format(os.stat(\"video.mp4\").st_size/(1024*1024))\n",
     "        dff.loc[len(dff)]=[l[props][0],l[props][1],l[props][2],l[props][3],l[props][4],l[props][5],l[props][6],l[props][7],size]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4156,6 +4398,20 @@
    "source": [
     "dff.sort_values('MegaBytes',ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
