--- a/Sunum/comp/sıkıştırma.ipynb
+++ b/Sunum/comp/sıkıştırma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -26,64 +26,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Ortalama 12sn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>original</td>\n",
        "      <td>23.332 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>13.856 MegaBytes</td>\n",
+       "      <td>cabac_true</td>\n",
+       "      <td>13.857 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13.748 MegaBytes</td>\n",
+       "      <td>cabac_false</td>\n",
+       "      <td>13.756 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13.864 MegaBytes</td>\n",
+       "      <td>dct8x8_true</td>\n",
+       "      <td>13.873 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13.835 MegaBytes</td>\n",
+       "      <td>dct8x8_false</td>\n",
+       "      <td>13.847 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>13.872 MegaBytes</td>\n",
+       "      <td>interlaced_true</td>\n",
+       "      <td>13.848 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>13.865 MegaBytes</td>\n",
+       "      <td>interlaced_false</td>\n",
+       "      <td>13.847 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>13.732 MegaBytes</td>\n",
+       "      <td>intra-refresh_true</td>\n",
+       "      <td>13.753 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>13.852 MegaBytes</td>\n",
+       "      <td>intra-refresh_false</td>\n",
+       "      <td>13.870 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>en_iyi</td>\n",
+       "      <td>13.558</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Ortalama 12sn\n",
-       "0  23.332 MegaBytes\n",
-       "1  13.856 MegaBytes\n",
-       "2  13.748 MegaBytes\n",
-       "3  13.864 MegaBytes\n",
-       "4  13.835 MegaBytes\n",
-       "5  13.872 MegaBytes\n",
-       "6  13.865 MegaBytes\n",
-       "7  13.732 MegaBytes\n",
-       "8  13.852 MegaBytes"
+       "            Unnamed: 0     Ortalama 12sn\n",
+       "0             original  23.332 MegaBytes\n",
+       "1           cabac_true  13.857 MegaBytes\n",
+       "2          cabac_false  13.756 MegaBytes\n",
+       "3          dct8x8_true  13.873 MegaBytes\n",
+       "4         dct8x8_false  13.847 MegaBytes\n",
+       "5      interlaced_true  13.848 MegaBytes\n",
+       "6     interlaced_false  13.847 MegaBytes\n",
+       "7   intra-refresh_true  13.753 MegaBytes\n",
+       "8  intra-refresh_false  13.870 MegaBytes\n",
+       "9               en_iyi            13.558"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -137,64 +153,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>218</th>\n",
+       "      <th>201</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>150.497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>150.497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
        "      <td>1000</td>\n",
        "      <td>False</td>\n",
        "      <td>100</td>\n",
        "      <td>50</td>\n",
        "      <td>10</td>\n",
-       "      <td>51</td>\n",
+       "      <td>10</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>13.889</td>\n",
+       "      <td>False</td>\n",
+       "      <td>150.497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>154</th>\n",
+       "      <th>209</th>\n",
        "      <td>1000</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>150.497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>False</td>\n",
        "      <td>100</td>\n",
        "      <td>50</td>\n",
        "      <td>10</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>13.902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>1000</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>False</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>13.903</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
-       "      <td>250</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>13.903</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>51</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>13.905</td>\n",
+       "      <td>150.497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -209,64 +225,64 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
+       "      <th>101</th>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>100</td>\n",
        "      <td>50</td>\n",
        "      <td>51</td>\n",
        "      <td>51</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.386</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
+       "      <th>99</th>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>100</td>\n",
        "      <td>50</td>\n",
        "      <td>51</td>\n",
        "      <td>51</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.386</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>True</td>\n",
+       "      <th>85</th>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>100</td>\n",
        "      <td>0</td>\n",
        "      <td>51</td>\n",
        "      <td>51</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.386</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
+       "      <th>83</th>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>250</td>\n",
+       "      <td>False</td>\n",
+       "      <td>100</td>\n",
        "      <td>0</td>\n",
        "      <td>51</td>\n",
        "      <td>51</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.386</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>196</th>\n",
+       "      <th>261</th>\n",
        "      <td>1000</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>250</td>\n",
        "      <td>50</td>\n",
        "      <td>51</td>\n",
        "      <td>51</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.386</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3.141</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,35 +291,35 @@
       ],
       "text/plain": [
        "     vbv-buf-capacity  trellis  sync-lookahead  quantizer  qp-min  qp-max  \\\n",
-       "218              1000    False             100         50      10      51   \n",
-       "154              1000     True             100         50      10      51   \n",
-       "234              1000    False             250          0      10      51   \n",
-       "170              1000     True             250          0      10      51   \n",
-       "138              1000     True             100          0      10      51   \n",
+       "201              1000    False             100          0      10      10   \n",
+       "73                  0    False             100          0      10      10   \n",
+       "215              1000    False             100         50      10      10   \n",
+       "209              1000    False             100          0      51      10   \n",
+       "217              1000    False             100         50      10      10   \n",
        "..                ...      ...             ...        ...     ...     ...   \n",
-       "164              1000     True             100         50      51      51   \n",
-       "162              1000     True             100         50      51      51   \n",
-       "148              1000     True             100          0      51      51   \n",
-       "50                  0     True             250          0      51      51   \n",
-       "196              1000     True             250         50      51      51   \n",
+       "101                 0    False             100         50      51      51   \n",
+       "99                  0    False             100         50      51      51   \n",
+       "85                  0    False             100          0      51      51   \n",
+       "83                  0    False             100          0      51      51   \n",
+       "261              1000    False             250         50      51      51   \n",
        "\n",
        "     ip-factor  b-pyramid MegaBytes  \n",
-       "218        0.0       True    13.889  \n",
-       "154        0.0       True    13.902  \n",
-       "234        0.0       True    13.903  \n",
-       "170        0.0       True    13.903  \n",
-       "138        0.0       True    13.905  \n",
+       "201        2.0      False   150.497  \n",
+       "73         2.0      False   150.497  \n",
+       "215        0.0      False   150.497  \n",
+       "209        2.0      False   150.497  \n",
+       "217        2.0      False   150.497  \n",
        "..         ...        ...       ...  \n",
-       "164        2.0       True     3.386  \n",
-       "162        0.0       True     3.386  \n",
-       "148        2.0       True     3.386  \n",
-       "50         0.0       True     3.386  \n",
-       "196        2.0       True     3.386  \n",
+       "101        2.0      False     3.141  \n",
+       "99         0.0      False     3.141  \n",
+       "85         2.0      False     3.141  \n",
+       "83         0.0      False     3.141  \n",
+       "261        2.0      False     3.141  \n",
        "\n",
        "[262 rows x 9 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,9 +327,8 @@
    "source": [
     "df=pd.read_csv('others_kombinasyon.csv',index_col='Unnamed: 0')\n",
     "for i in range(len(df)):\n",
-    "    df['MegaBytes'].iloc[i]=df['MegaBytes'].iloc[i].split(' ')[0]\n",
-    "df.sort_values('MegaBytes',inplace=True)\n",
-    "df"
+    "    df['MegaBytes'].iloc[i]=float(df['MegaBytes'].iloc[i].split(' ')[0])\n",
+    "df.sort_values('MegaBytes',ascending=False)"
    ]
   },
   {
