--- a/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
+++ b/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,28 +11,19 @@
      "text": [
       "In cb_newpad\n",
       "\n",
-      "gstname= application/x-rtp\n",
-      "features= <Gst.CapsFeatures object at 0x7ff5f004a3a0 (GstCapsFeatures at 0x7ff58c003f40)>\n"
+      "gstname= audio/mpeg\n",
+      "In cb_newpad\n",
+      "\n",
+      "gstname= video/x-h264\n",
+      "features= <Gst.CapsFeatures object at 0x7f08c8470b20 (GstCapsFeatures at 0x332d920)>\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Failed to link decoder src pad to source bin ghost pad\n",
-      "ERROR:__main__:Error received from element sink: Output window was closed\n",
-      "ERROR:__main__:Debugging information: xvimagesink.c(554): gst_xv_image_sink_handle_xevents (): /GstPipeline:test-pipeline/GstXvImageSink:sink\n"
+      "Failed to link decoder src pad to source bin ghost pad\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<enum GST_STATE_CHANGE_SUCCESS of type Gst.StateChangeReturn>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -47,6 +38,7 @@
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
     "uri_name='rtsp://127.0.0.1:8554/test'\n",
+    "file='/home/fkurt/Murat/ElephantsDream.mp4'\n",
     "\n",
     "def cb_newpad(demux, src, sink):\n",
     "    print(\"In cb_newpad\\n\")\n",
@@ -56,13 +48,11 @@
     "    features=caps.get_features(0)\n",
     "\n",
     "    print(\"gstname=\",gstname)\n",
-    "    if(gstname.find(\"application\")!=-1):\n",
+    "    if(gstname.find(\"video\")!=-1):\n",
     "        print(\"features=\",features)\n",
     "        sink_pad=sink.get_static_pad(\"sink\")\n",
-    "\n",
     "        if not src.link(sink_pad):\n",
     "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
-    "\n",
     "\n",
     "\n",
     "logging.basicConfig(level=logging.DEBUG, format=\"[%(name)s] [%(levelname)8s] - %(message)s\")\n",
@@ -72,28 +62,44 @@
     "\n",
     "pipeline=Gst.Pipeline.new('test-pipeline')\n",
     "\n",
-    "source=Gst.ElementFactory.make('rtspsrc','source')\n",
-    "source.set_property('location', uri_name)\n",
+    "source=Gst.ElementFactory.make('filesrc','source')\n",
+    "source.set_property('location', file)\n",
     "\n",
-    "depay=Gst.ElementFactory.make(\"rtph264depay\", \"depay\")\n",
-    "\n",
-    "source.connect('pad-added', cb_newpad, depay)\n",
-    "\n",
-    "\n",
+    "demux=Gst.ElementFactory.make(\"qtdemux\", \"demux\")\n",
+    "if not demux:\n",
+    "    sys.stderr.write(\" Unable to create demux \\n\")\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
-    "sink=Gst.ElementFactory.make('xvimagesink','sink')\n",
+    "demux.connect(\"pad-added\", cb_newpad, decoder)\n",
+    "\n",
+    "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
+    "x264enc=Gst.ElementFactory.make('x264enc','encoder')\n",
+    "\n",
+    "sink=Gst.ElementFactory.make('rtspclientsink','sink')\n",
+    "if not sink:\n",
+    "    sys.stderr.write(\" Unable to create udpsink\")\n",
+    "sink.set_property(\"location\", uri_name)\n",
+    "\n",
+    "if not sink or not decoder or not videoconvert or not x264enc or not pipeline:\n",
+    "    logger.error('Elementlerde sıkıntı var...')\n",
+    "    sys.exit(1)\n",
     "\n",
     "pipeline.add(source)\n",
-    "pipeline.add(depay)\n",
+    "pipeline.add(demux)\n",
     "pipeline.add(decoder)\n",
+    "pipeline.add(videoconvert)\n",
+    "pipeline.add(x264enc)\n",
     "pipeline.add(sink)\n",
     "\n",
+    "if source.link(demux):\n",
+    "    logger.info('src-demux Bağlandı')\n",
     "\n",
     "\n",
-    "if depay.link(decoder):\n",
-    "    logger.info('depay-decoder Bağlandı')\n",
-    "if decoder.link(sink):\n",
-    "    logger.info('decoder-sink Bağlandı')\n",
+    "if decoder.link(videoconvert):\n",
+    "    logger.info('decoder-videoconvert Bağlandı')\n",
+    "if videoconvert.link(x264enc):\n",
+    "    logger.info('videoconvert-x264enc Bağlandı')\n",
+    "if x264enc.link(sink):\n",
+    "    logger.info('x264enc-sink Bağlandı')\n",
     "\n",
     "ret=pipeline.set_state(Gst.State.PLAYING)\n",
     "\n",
@@ -132,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
