--- a/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
+++ b/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
@@ -2,27 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In cb_newpad\n",
-      "\n",
-      "gstname= audio/mpeg\n",
-      "In cb_newpad\n",
-      "\n",
-      "gstname= video/x-h264\n",
-      "features= <Gst.CapsFeatures object at 0x7f08c8470b20 (GstCapsFeatures at 0x332d920)>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to link decoder src pad to source bin ghost pad\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (585187772.py, line 35)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 35\u001b[0;36m\u001b[0m\n\u001b[0;31m    state_return = .set_state(Gst.State.NULL)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -40,6 +28,8 @@
     "uri_name='rtsp://127.0.0.1:8554/test'\n",
     "file='/home/fkurt/Murat/ElephantsDream.mp4'\n",
     "\n",
+    "global decoder\n",
+    "\n",
     "def cb_newpad(demux, src, sink):\n",
     "    print(\"In cb_newpad\\n\")\n",
     "    caps=src.get_current_caps()\n",
@@ -53,6 +43,45 @@
     "        sink_pad=sink.get_static_pad(\"sink\")\n",
     "        if not src.link(sink_pad):\n",
     "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
+    "\n",
+    "def stop_release_source(source_id):\n",
+    "    global decoder\n",
+    "    global demux\n",
+    "    global pipeline\n",
+    "\n",
+    "    #Attempt to change status of source to be released \n",
+    "    state_return = decoder.set_state(Gst.State.NULL)\n",
+    "\n",
+    "    if state_return == Gst.StateChangeReturn.SUCCESS:\n",
+    "        print(\"STATE CHANGE SUCCESS\\n\")\n",
+    "        pad_name = \"sink_%u\" % source_id\n",
+    "        print(pad_name)\n",
+    "        #Retrieve sink pad to be released\n",
+    "        sinkpad = demux.get_static_pad(pad_name)\n",
+    "        #Send flush stop event to the sink pad, then release from the streammux\n",
+    "        sinkpad.send_event(Gst.Event.new_flush_stop(False))\n",
+    "        demux.release_request_pad(sinkpad)\n",
+    "        print(\"STATE CHANGE SUCCESS\\n\")\n",
+    "        #Remove the source bin from the pipeline\n",
+    "        pipeline.remove(decoder)\n",
+    "        source_id -= 1\n",
+    "        g_num_sources -= 1\n",
+    "\n",
+    "    elif state_return == Gst.StateChangeReturn.FAILURE:\n",
+    "        print(\"STATE CHANGE FAILURE\\n\")\n",
+    "    \n",
+    "    elif state_return == Gst.StateChangeReturn.ASYNC:\n",
+    "        state_return = decoder.get_state(Gst.CLOCK_TIME_NONE)\n",
+    "        pad_name = \"sink_%u\" % source_id\n",
+    "        print(pad_name)\n",
+    "        sinkpad = demux.get_static_pad(pad_name)\n",
+    "        sinkpad.send_event(Gst.Event.new_flush_stop(False))\n",
+    "        demux.release_request_pad(sinkpad)\n",
+    "        print(\"STATE CHANGE ASYNC\\n\")\n",
+    "        pipeline.remove(decoder)\n",
+    "\n",
+    "        nvdecoder=Gst.ElementFactory.make('nvv4l2decoder','decoder')\n",
+    "        pipeline.add\n",
     "\n",
     "\n",
     "logging.basicConfig(level=logging.DEBUG, format=\"[%(name)s] [%(levelname)8s] - %(message)s\")\n",
@@ -69,6 +98,7 @@
     "if not demux:\n",
     "    sys.stderr.write(\" Unable to create demux \\n\")\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
+    "\n",
     "demux.connect(\"pad-added\", cb_newpad, decoder)\n",
     "\n",
     "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
@@ -92,8 +122,6 @@
     "\n",
     "if source.link(demux):\n",
     "    logger.info('src-demux Bağlandı')\n",
-    "\n",
-    "\n",
     "if decoder.link(videoconvert):\n",
     "    logger.info('decoder-videoconvert Bağlandı')\n",
     "if videoconvert.link(x264enc):\n",
@@ -126,6 +154,96 @@
     "        logger.error(\"Unexpected message received.\")\n",
     "\n",
     "pipeline.set_state(Gst.State.NULL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tools'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlogging\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mthreading\u001b[39;00m \u001b[39mimport\u001b[39;00m Thread, Event\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapplication_init\u001b[39;00m \u001b[39mimport\u001b[39;00m application_init\n\u001b[1;32m      6\u001b[0m application_init()\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgi\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrepository\u001b[39;00m \u001b[39mimport\u001b[39;00m Gst, GLib\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tools'"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "from threading import Thread, Event\n",
+    "\n",
+    "from tools.application_init import application_init\n",
+    "\n",
+    "application_init()\n",
+    "\n",
+    "from gi.repository import Gst, GLib\n",
+    "from tools.logging_pad_probe import logging_pad_probe\n",
+    "from tools.runner import Runner\n",
+    "\n",
+    "log = logging.getLogger(\"main\")\n",
+    "\n",
+    "log.info(\"building pipeline\")\n",
+    "pipeline = Gst.Pipeline.new()\n",
+    "caps = Gst.Caps.from_string(\"audio/x-raw,format=S16LE,rate=48000,channels=2\")\n",
+    "\n",
+    "testsrc1 = Gst.ElementFactory.make(\"audiotestsrc\", \"testsrc1\")\n",
+    "testsrc1.set_property(\"is-live\", True)  # (3)\n",
+    "testsrc1.set_property(\"freq\", 220)\n",
+    "pipeline.add(testsrc1)\n",
+    "\n",
+    "mixer = Gst.ElementFactory.make(\"audiomixer\")\n",
+    "pipeline.add(mixer)\n",
+    "testsrc1.link_filtered(mixer, caps)\n",
+    "\n",
+    "sink = Gst.ElementFactory.make(\"autoaudiosink\")\n",
+    "pipeline.add(sink)\n",
+    "mixer.link_filtered(sink, caps)\n",
+    "\n",
+    "testsrc1.get_static_pad(\"src\").add_probe(\n",
+    "    Gst.PadProbeType.BUFFER, logging_pad_probe, \"testsrc1-output\")\n",
+    "\n",
+    "mixer.get_static_pad(\"src\").add_probe(\n",
+    "    Gst.PadProbeType.BUFFER, logging_pad_probe, \"mixer-output\")\n",
+    "\n",
+    "\n",
+    "def add_new_src():\n",
+    "    log.info(\"Adding testsrc2\")\n",
+    "    testsrc2 = Gst.ElementFactory.make(\"audiotestsrc\", \"testsrc2\")\n",
+    "    testsrc2.set_property(\"freq\", 440)\n",
+    "    testsrc2.set_property(\"is-live\", True)  # (2)\n",
+    "\n",
+    "    testsrc2.get_static_pad(\"src\").add_probe(\n",
+    "        Gst.PadProbeType.BUFFER, logging_pad_probe, \"testsrc2-output\")\n",
+    "\n",
+    "    pipeline.add(testsrc2)\n",
+    "    testsrc2.link_filtered(mixer, caps)\n",
+    "    testsrc2.sync_state_with_parent()  # (4)\n",
+    "    log.info(\"Adding testsrc2 done\")\n",
+    "\n",
+    "\n",
+    "stop_event = Event()\n",
+    "\n",
+    "\n",
+    "def timed_sequence():\n",
+    "    log.info(\"Starting Sequence\")\n",
+    "    if stop_event.wait(2): return\n",
+    "    GLib.idle_add(add_new_src)  # (1)\n",
+    "    log.info(\"Sequence ended\")\n",
+    "\n",
+    "\n",
+    "t = Thread(target=timed_sequence, name=\"Sequence\")\n",
+    "t.start()\n",
+    "\n",
+    "runner = Runner(pipeline)\n",
+    "runner.run_blocking()\n",
+    "\n",
+    "stop_event.set()\n",
+    "t.join()"
    ]
   },
   {
